--- a/pug/index.pug
+++ b/pug/index.pug
@@ -14,3 +14,5 @@ html
         include bannerSection
         include servicesSection
         include portfolioSection
+        include about
+        include team
