--- a/pug/servicesSection.pug
+++ b/pug/servicesSection.pug
@@ -7,7 +7,8 @@ style.
     .servicesSection{
         display: flex;
         flex-direction: column;
-        margin: 100px 0;
+        padding: 100px 0;
+        background-color: #f1f2f6;
     }
     .servicesSectionHeader{
         display: flex;
