--- a/pug/about.pug
+++ b/pug/about.pug
@@ -99,7 +99,7 @@ style.
         background-color: #ffa801;
     }
 
-section.aboutSection
+section(class='aboutSection' id='about')
     .aboutSectionHeader
         h1(class='sans-serif md-txt') ABOUT
         p(class='serif sm-txt') Lorem ipsum dolor sit amet, consectetur.
