--- a/pug/bannerSection.pug
+++ b/pug/bannerSection.pug
@@ -19,7 +19,11 @@ style.
     .bannerSection h2, .bannerSection h1, .bannerSection button {
         margin: 15px 0;
     }
+    .bannerSection a{
+        text-decoration: none;
+    }
 section.bannerSection
     h2(class='md-txt serif') Welcome to our workplace!
     h1(class='l-txt sans-serif') WE WOULD LIKE TO MEET YOU
-    button(class='btn sm-txt') TELL ME MORE
+    button(class='btn sm-txt') 
+        a(href='#services') TELL ME MORE
