--- a/pug/contactUsSection.pug
+++ b/pug/contactUsSection.pug
@@ -49,7 +49,7 @@ style.
         padding 30px;
     }
 
-section.contactUsSection
+section(class='contactUsSection' id='contact')
     .contactUsSectionHeader
         h1(class='md-txt sans-serif') CONTACT US
         p(class='sm-txt serif') Lorem ipsum dolor sit amet consectetur.
