--- a/pug/header.pug
+++ b/pug/header.pug
@@ -93,7 +93,7 @@ header#header
         li 
             a(href='#portfolio') PORTFOLIO
         li
-            a(href='#services') ABOUT
+            a(href='#about') ABOUT
         li 
             a(href='#team') TEAM
         li 
