--- a/pug/portfolioSection.pug
+++ b/pug/portfolioSection.pug
@@ -186,7 +186,7 @@ style.
         flex-wrap: wrap;
     }
 
-section.portfolioSection
+section(class='portfolioSection' id='portfolio')
     .portfolioSectionHeader
         h2(class='md-txt sans-serif') PORTFOLIO
         p(class='sm-txt serif') Lorem ipsum dolor sit amet, consectetur.
