--- a/pug/servicesSection.pug
+++ b/pug/servicesSection.pug
@@ -36,7 +36,7 @@ style.
         margin: 10px 0;
     }
 
-section.servicesSection
+section(class='servicesSection' id='services')
     .servicesSectionHeader
             h2(class='md-txt sans-serif') SERVICES
             p(class='sm-txt serif') Lorem ipsum dolor sit amet, consectetur adipiscing elit.
