--- a/pug/team.pug
+++ b/pug/team.pug
@@ -74,7 +74,7 @@ style.
     .teamSectionFooter {
         text-align: center;
     } 
-section.teamSection
+section(class='teamSection' id='team')
     .teamSectionHeader
         h1(class='md-txt sans-serif') OUR AMAZING TEAM
         p(class='sm-txt serif') Lorem ipsum dolor sit amet consectetur.
