fixed the navbar to top of viewport

--- a/pug/bannerSection.pug
+++ b/pug/bannerSection.pug
@@ -26,4 +26,4 @@ section.bannerSection
     h2(class='md-txt serif') Welcome to our workplace!
     h1(class='l-txt sans-serif') WE WOULD LIKE TO MEET YOU
     button(class='btn sm-txt') 
-        a(href='#services') TELL ME MORE
+        a(class='sectionLink' href='#services') TELL ME MORE
