--- a/pug/header.pug
+++ b/pug/header.pug
@@ -21,8 +21,10 @@ style.
         display: flex;
         flex-direction: column;
         padding: 15px 90px;
-        position: absolute;
+        position: fixed;
         width: calc(100% - 180px);
+        z-index: 3;
+        top: 0;
     }
     header .pageSections{
         display: none;
@@ -85,12 +87,13 @@ script.
         setTimeout(function() {
             element.scrollTop = element.scrollTop + perTick;
             if (element.scrollTop === to) return;
-            scrollTo(element, to, duration - 3);
+            scrollTo(element, to, duration - 10);
         }, 10);
     }
 
     window.addEventListener('DOMContentLoaded', function () {
         let anchorTagEls = document.getElementsByClassName('sectionLink');
+        //- add navbar eventlisteners
         for(let i = 0;i < anchorTagEls.length;i++ ){
             anchorTagEls[i].onclick = animateScroll;
         }
@@ -101,10 +104,11 @@ script.
         let section = e.target.getAttribute("href");
         // get top position of section Elements in relation to top of page
         var sectionEl = document.getElementById(section.slice(1));
-        let jmp = sectionEl.offsetTop;
+        let jmp = sectionEl.offsetTop - 65;
         let htmlEl = document.getElementsByTagName('html')[0];
-        setTimeout(()=> scrollTo(htmlEl, jmp, 400), 600);
-        handleMenuBtnClicked();
+        setTimeout(()=> scrollTo(htmlEl, jmp, 350), 700);
+        if(isMenuBtnClicked) // - close navigation bar when opened before animating scroll
+            handleMenuBtnClicked();
     }
 //- End of Header JS
 
