--- a/pug/bannerSection.pug
+++ b/pug/bannerSection.pug
@@ -22,6 +22,13 @@ style.
     .bannerSection a{
         text-decoration: none;
     }
+    /* media query styles */
+    @media (min-width: 669px) and (max-width: 991px) {
+        .bannerSection h1{
+            padding: 0 50px;
+            text-align: center;
+        }
+    }
 section.bannerSection
     h2(class='md-txt serif') Welcome to our workplace!
     h1(class='l-txt sans-serif') WE WOULD LIKE TO MEET YOU
