--- a/pug/header.pug
+++ b/pug/header.pug
@@ -55,9 +55,16 @@ style.
         cursor: pointer;
     }
     //- Media Queries
-    @media only screen and (max-width: 668px) { //- iPhone 6/7/8
+    @media only screen and (max-width: 668px) { 
         header{
             height: 56px;
+        }
+    }
+    @media (min-width: 669px) and (max-width: 991px) {
+        #header button{
+            padding: 4px;
+            box-sizing: border-box;
+            height: auto;
         }
     }
 
@@ -126,17 +133,17 @@ script.
 header#header
     .headerTopRow
         a(href='#header' class='sm-txt cursive') Modern Landing Page
-        button(class='btn' onclick='handleMenuBtnClicked(this)') MENU
+        button(class='btn xs-txt' onclick='handleMenuBtnClicked(this)') MENU
             i(class='fas fa-bars')
     ul(class='pageSections sans-serif')
         li 
-            a(class='sectionLink' href='#services') SERVICES
+            a(class='sm-txt sectionLink' href='#services') SERVICES
         li 
-            a(class='sectionLink' href='#portfolio') PORTFOLIO
+            a(class='sm-txt sectionLink' href='#portfolio') PORTFOLIO
         li
-            a(class='sectionLink' href='#about') ABOUT
+            a(class='sm-txt sectionLink' href='#about') ABOUT
         li 
-            a(class='sectionLink' href='#team') TEAM
+            a(class='sm-txt sectionLink' href='#team') TEAM
         li 
-            a(class='sectionLink' href='#contact') CONTACT
+            a(class='sm-txt sectionLink' href='#contact') CONTACT
         
