--- a/pug/contactUsSection.pug
+++ b/pug/contactUsSection.pug
@@ -48,6 +48,11 @@ style.
     .contactUsSection form button {
         padding 30px;
     }
+    @media (min-width: 0px) and (max-width: 668px) {
+        .contactUsSection textarea {
+            width: 150px;
+        }
+    }
 
 section(class='contactUsSection' id='contact')
     .contactUsSectionHeader
