--- a/pug/index.pug
+++ b/pug/index.pug
@@ -5,10 +5,12 @@ html
         link(rel="stylesheet" href="./fonts.css")
         link(rel="stylesheet" href="./commonStyles.css")
         link(href="https://fonts.googleapis.com/css?family=Charm|Crimson+Text|Oxygen" rel="stylesheet")
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
         style.
             body{
                 margin: 0;
             }
+        
     body
         include header
         include bannerSection
