--- a/pug/servicesSection.pug
+++ b/pug/servicesSection.pug
@@ -15,6 +15,7 @@ style.
         flex-direction: column;
         align-items: center;
         margin-bottom: 50px;
+        text-align: center;
     }
     .servicesSection .services{
         display: flex;
@@ -35,6 +36,12 @@ style.
     .service h2, .service i, .service p{
         margin: 10px 0;
     }
+    @media (min-width: 0px) and (max-width: 668px) {
+        .services {
+            flex-direction: column;
+        }
+    }
+    
 
 section(class='servicesSection' id='services')
     .servicesSectionHeader
