--- a/pug/team.pug
+++ b/pug/team.pug
@@ -74,6 +74,12 @@ style.
     .teamSectionFooter {
         text-align: center;
     } 
+    @media (min-width: 0px) and (max-width: 668px) {
+        .teamSection .team {
+            display: flex;
+            flex-direction: column;
+        }
+    }
 section(class='teamSection' id='team')
     .teamSectionHeader
         h1(class='md-txt sans-serif') OUR AMAZING TEAM
