--- a/pug/bannerSection.pug
+++ b/pug/bannerSection.pug
@@ -18,6 +18,7 @@ style.
     }
     .bannerSection h2, .bannerSection h1, .bannerSection button {
         margin: 15px 0;
+        text-align: center;
     }
     .bannerSection a{
         text-decoration: none;
@@ -26,7 +27,15 @@ style.
     @media (min-width: 669px) and (max-width: 991px) {
         .bannerSection h1{
             padding: 0 50px;
-            text-align: center;
+        }
+    }
+
+    @media (min-width: 0px) and (max-width: 668px) {
+        .bannerSection {
+            height: 500px;
+        }
+        .bannerSection h2, .bannerSection h1, .bannerSection button {
+            margin: 5px 0;
         }
     }
 section.bannerSection
