--- a/pug/contactUsSection.pug
+++ b/pug/contactUsSection.pug
@@ -50,7 +50,27 @@ style.
     }
     @media (min-width: 0px) and (max-width: 668px) {
         .contactUsSection textarea {
-            width: 150px;
+            width: 100%;
+            box-sizing: border-box;
+            margin: 5px 0;
+            height: 200px;
+        }
+        .contactUsSection {
+            flex-direction: column;
+        }
+        .contactUsSection .inputsContainer {
+            flex-direction: column;
+            height: auto;
+            width: 90%;
+        }
+        .contactUsSection .inputsContainer .inputContainer{
+            margin: 0;
+        }
+        .contactUsSection .inputsContainer input{
+            margin: 5px 0;
+        }
+        .contactUsSection button {
+            padding: 20px;
         }
     }
 
