--- a/pug/footer.pug
+++ b/pug/footer.pug
@@ -42,6 +42,13 @@ style.
     .footer .companyRulesContainer p:hover{
         text-decoration: underline;
     }
+
+    @media (min-width: 0px) and (max-width: 668px) {
+        .footer {
+            flex-direction: column;
+            align-items: center;
+        }
+    }
 section.footer
     .copyrightContainer
         p(class='sm-txt sans-serif') Copyright © Your Website 
