--- a/pug/index.pug
+++ b/pug/index.pug
@@ -10,6 +10,9 @@ html
             body{
                 margin: 0;
             }
+            html, body{
+                width: 100vw;
+            }
         
     body
         include header
