--- a/pug/about.pug
+++ b/pug/about.pug
@@ -135,6 +135,11 @@ style.
         }
 
     }
+    @media (min-width: 992px) {
+        .timelineContainer{
+            width: 70vw;
+        }
+    }
 
 section(class='aboutSection' id='about')
     .aboutSectionHeader
