--- a/pug/contactUsSection.pug
+++ b/pug/contactUsSection.pug
@@ -73,6 +73,26 @@ style.
             padding: 20px;
         }
     }
+    @media (min-width: 992px) {
+        .contactUsSection .inputsContainer {
+            height: auto;
+            width: 80%;
+            justify-content: space-between;
+        }
+        .contactUsSection .inputsContainer .inputContainer,
+        .contactUsSection .inputsContainer textarea{
+            width: 50%;
+        }
+        .contactUsSection .inputsContainer input{
+            margin-bottom: 15px;
+        }
+        .contactUsSection .inputsContainer input:last-child{
+            margin-bottom: 0;
+        }
+        .contactUsSection button {
+            padding: 20px 30px;
+        }
+    }
 
 section(class='contactUsSection' id='contact')
     .contactUsSectionHeader
