--- a/pug/portfolioSection.pug
+++ b/pug/portfolioSection.pug
@@ -198,6 +198,20 @@ style.
             height: 300px; 
         }
     }
+    @media (min-width: 992px) {
+        .portfolioCategory img {
+            width: 25vw;
+            height: 25vw;
+        }
+
+        .projectDialogContainer .dialogBody{
+            width:50vw;
+        }
+
+        .projectDialogContainer .dialogBody img{
+            align-self: center;
+        }
+    }
 
 section(class='portfolioSection' id='portfolio')
     .portfolioSectionHeader
