--- a/pug/team.pug
+++ b/pug/team.pug
@@ -80,6 +80,14 @@ style.
             flex-direction: column;
         }
     }
+    @media (min-width: 992px) {
+        .employee{
+            margin: 0 50px;
+        }
+        .teamSectionFooter {
+            width: 60vw;
+        }
+    }
 section(class='teamSection' id='team')
     .teamSectionHeader
         h1(class='md-txt sans-serif') OUR AMAZING TEAM
